--- a/gestaourbana/templates/includes/header.html
+++ b/gestaourbana/templates/includes/header.html
@@ -7,11 +7,11 @@
             <a href="/" tabindex="0"><img id="logo-prefeitura" src="{% static 'img/logo_prefeitura.jpg' %}" alt="Prefeitura de São Paulo"></a>
         </div>        
         <ul id="languages">
-            <li><a href="">English</a></li>
-            <li><a href="">Español</a></li>
+            <li><a href="/english">English</a></li>
+            <li><a href="/espanol">Español</a></li>
         </ul>
     </div>
     <div  id="entenda" class="three columns">
-        <p><a href="/"><i class="fa fa-question-circle-o fa-lg"></i>Entenda</a></p>
+        <p><a href="/entenda"><i class="fa fa-question-circle-o fa-lg"></i>Entenda</a></p>
     </div>
 </header>
