--- a/gestaourbana/static/css/src/pages/static_page.scss
+++ b/gestaourbana/static/css/src/pages/static_page.scss
@@ -120,6 +120,24 @@
 		margin-top: 1.5rem;
 		margin-bottom: .5rem;
 	}
+
+	/* Overwriting some defaults */
+
+	.responsive-object {
+		padding-bottom: 0 !important;
+	}
+
+	.richtext-image {
+		&.left {
+			margin-right: 1.5rem;
+			float: left;
+		}
+
+		&.right {
+			margin-left: 1.5rem;
+			float: right;
+		}
+	}
 }
 
 .go-back {
